--- a/action.yml
+++ b/action.yml
@@ -37,6 +37,8 @@ runs:
           echo "Unsupported cloud provider: ${{ inputs.cloud_provider }}"
           exit 1
         fi
+
+        cat .tflint.hcl
       shell: bash
 
     - name: Run TFLint
